--- a/AsyncInn/AsyncInn.csproj
+++ b/AsyncInn/AsyncInn.csproj
@@ -16,6 +16,8 @@
     <None Remove="Microsoft.EntityFrameworkCore.Sqlite" />
     <None Remove="Services\" />
     <None Remove="Services\Database\" />
+    <None Remove="Models\Identity\" />
+    <None Remove="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
@@ -25,6 +27,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.11" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -33,5 +36,6 @@
     <Folder Include="Migrations\" />
     <Folder Include="Services\" />
     <Folder Include="Services\Database\" />
+    <Folder Include="Models\Identity\" />
   </ItemGroup>
 </Project>
