--- a/AsyncInn/AsyncInn.csproj
+++ b/AsyncInn/AsyncInn.csproj
@@ -20,6 +20,8 @@
     <None Remove="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
     <None Remove="Swashbuckle.AspNetCore" />
     <None Remove="Microsoft.AspNetCore.Authentication.JwtBearer" />
+    <None Remove="Models\DTOs\" />
+    <None Remove="Services\Identity\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
@@ -41,5 +43,7 @@
     <Folder Include="Services\" />
     <Folder Include="Services\Database\" />
     <Folder Include="Models\Identity\" />
+    <Folder Include="Models\DTOs\" />
+    <Folder Include="Services\Identity\" />
   </ItemGroup>
 </Project>
