--- a/AsyncInn/AsyncInn.csproj
+++ b/AsyncInn/AsyncInn.csproj
@@ -22,6 +22,7 @@
     <None Remove="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <None Remove="Models\DTOs\" />
     <None Remove="Services\Identity\" />
+    <None Remove="README\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
@@ -45,5 +46,6 @@
     <Folder Include="Models\Identity\" />
     <Folder Include="Models\DTOs\" />
     <Folder Include="Services\Identity\" />
+    <Folder Include="README\" />
   </ItemGroup>
 </Project>
