revert DbContext line back to get through local docker/azure setup

--- a/AsyncInn/appsettings.json
+++ b/AsyncInn/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=sql;User=SA;Password=NotMyPass@word;Trust Server Certificate=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,13 +10,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=sql;User=SA;Password=NotMyPassword98"
-  }
-
-
-
-
+  "AllowedHosts": "*"
 }
