Has Controllers for Hotels, RoomStyles, and Amenities; CRUD works in Postman

--- a/AsyncInn/AsyncInn.csproj
+++ b/AsyncInn/AsyncInn.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>Async_Inn</RootNamespace>
     <UserSecretsId>9800b86c-7270-432b-aebf-f8de8658cab4</UserSecretsId>
+    <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
